--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+RELEASE_STORE_FILE=C\:\\Users\\skarakoca\\AndroidStudioProjects\\NotificationBox\\app\\signing\\notification_key.jks
+RELEASE_STORE_PASSWORD=test1234
+RELEASE_KEY_ALIAS=notification_key
+RELEASE_KEY_PASSWORD=test1234
